tests/NormalTests/paczka1/small_fuzzy/11212199.err
Error in line 2: BAs S805 50,4
Error in line 5: BAs S731 46,4
Error in line 11: BAs S800 58,4
Error in line 7: X1Rrbk7Fv S805 64,1
